--- a/main.yml
+++ b/main.yml
@@ -3,11 +3,10 @@
   hosts: all
   become: true
   become_method: sudo
-  vars_files:
-  - secrets.yml
 
   roles:
   - centos.base
-  - centos.mate
-  - centos.atom
-  - centos.platformio-ide
+  - ansible-role-mate-desktop
+  - ansible-role-atom
+  - ansible-role-mosquitto
+  - ansible-role-nodered
